<resources>
    <string name="app_name">轻松e贷</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="affirm">确认</string>
    <string name="public_access_prompt_word">处理中，请稍后</string>
    <string name="no_network">网络连接不稳定</string>
    <string name="login_name">账   号:</string>
    <string name="login_password">密   码:</string>
    <string name="login_name_hint">请输入账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_text">登录</string>
    <string name="loan_easy_loan">轻松贷</string>
    <string name="loan_questionnaire_survey">问卷调查</string>
    <string name="loan_sell_statistics">销售统计</string>
    <string name="loan_notice_bar">公告栏</string>
    <string name="loan_return_goods">退货</string>
    <string name="loan_plan_query">进度查询</string>
    <string name="loan_easy_pay">轻松付</string>
    <string name="loan_mini_loan">MINI贷</string>
    <string name="set">设置</string>
    <string name="set_personal_info">个人信息</string>
    <string name="set_check_update">检查更新</string>
    <string name="set_about">关于</string>
    <string name="set_exit">注销</string>
    <string name="set_personal_info_name">中文姓名：</string>
    <string name="set_personal_info_No">工        号：</string>
    <string name="set_personal_info_orgNo">机构代码：</string>
    <string name="set_personal_info_orgName">机构名称：</string>
    <string name="set_about_app_name">应用名称：</string>
    <string name="set_about_publish_time">发布时间：</string>
    <string name="set_about_upgrade_explain">升级说明：</string>
    <string name="function_menu">功能菜单</string>
    <string name="function_menu_current_user">当前用户:</string>
    <string name="function_menu_current_user_name">张小北</string>
    <string name="function_menu_login_time">登录时间:</string>
    <string name="function_menu_login_time_value">2013#821109#821112 12:32:57</string>
    <string name="function_menu_version_update">版本升级</string>
    <string name="off_line_data_list">离线数据列表</string>
    <string name="off_line_data_list_name">用户名</string>
    <string name="off_line_data_list_card_number">证件号码</string>
    <string name="off_line_data_list_type">业务类型：</string>
    <string name="off_line_data_list_loan_number">贷款金额：</string>
    <string name="off_line_data_list_store_time">存储时间</string>
    <string name="function_menu_offline_operate">离线操作</string>
    <string name="function_menu_refund_plan_query">还款计划</string>
    <string name="return_goods_bill_query1">step-1账单查询</string>
    <string name="return_goods_bill_query2">1.账单查询</string>
    <string name="return_goods_custom_name">客户名称:</string>
    <string name="return_goods_card_number">证件号码:</string>
    <string name="return_goods_custom_name2">客户名称</string>
    <string name="return_goods_card_number2">证件号码</string>
    <string name="return_goods_iou_number">借据编号:</string>
    <string name="return_goods_search">搜索</string>
    <string name="return_goods_reset">重置</string>
    <string name="return_goods_bus_name">商户名称:</string>
    <string name="return_goods_loan_no">借款金额</string>
    <string name="return_goods_time">时            间</string>
    <string name="return_goods_or_return_goods">是否退货</string>
    <string name="return_goods_query_wrong1">没有获取到该次查询的账单!</string>
    <string name="return_goods_bill_detail1">2 账单详情</string>
    <string name="return_goods_bill_detail2">2.账单详细</string>
    <string name="return_goods_bill_detail_extend_info">的账单详情</string>
    <string name="return_goods_bill_detail_china_name">中文姓名:</string>
    <string name="return_goods_bill_detail_bus_name">商户名称:</string>
    <string name="return_goods_bill_detail_card_type">证件类型:</string>
    <string name="return_goods_bill_detail_pay_no">放款金额:</string>
    <string name="return_goods_bill_detail_time">时            间:</string>
    <string name="return_goods_bill_detail_iou_no">借  据  号:</string>
    <string name="return_goods_bill_detail_bargain_number">合同编号:</string>
    <string name="return_goods_bill_detail_item_name">蔡明鹏</string>
    <string name="return_goods_bill_detail_no_num">11010819901013118</string>
    <string name="return_goods_bill_detail_product_name">商品名称</string>
    <string name="return_goods_bill_detail_iou_no2">借   据   号:</string>
    <string name="return_goods_bill_detail_price">价          格</string>
    <string name="return_goods_bill_detail_first_pay_money">首付金额:</string>
    <string name="return_goods_bill_detail_return_money">退货金额:</string>
    <string name="return_goods_bill_detail_return_goods">退          货</string>
    <string name="return_goods_bill_ren">退货申请</string>
    <string name="return_goods_bill_ren2">3 退货提交</string>
    <string name="return_goods_bill_ren3">提交</string>
    <string name="return_goods_bill_ren_all_money">合计金额</string>
    <string name="return_goods_bill_ren_return_sucess">退货成功</string>
    <string name="return_goods_bill_ren_return_fail">退货失败</string>
    <string name="repay_plan_query">还款计划查询</string>
    <string name="repay_plan_query_pay_time">放款日期:</string>
    <string name="repay_plan_query_card_name">证   件    名:</string>
    <string name="repay_plan_query_linetime">期        限:</string>
    <string name="repay_plan_query_money_type">币        种:</string>
    <string name="repay_plan_query_give_no">发放金额:</string>
    <string name="repay_plan_query_give_money_time">放款日期:</string>
    <string name="repay_plan_detail">放款计划详情</string>
    <string name="repay_plan_detail_notice">放款通知书</string>
    <string name="repay_plan_detail_loan_linetime">贷款期限:</string>
    <string name="repay_plan_detail_give_date">发放日期:</string>
    <string name="repay_plan_detail_to_date">到  期  日:</string>
    <string name="repay_plan_detail_repay_type">还款方式:</string>
    <string name="repay_plan_detail_loan_count">贷款本金:</string>
    <string name="repay_plan_detail_discount_no">扣款账号:</string>
    <string name="repay_plan_detail_month_rate">月  利  率:</string>
    <string name="repay_plan_detail_item_qici">期        次</string>
    <string name="repay_plan_detail_item_detain_date">扣款日期</string>
    <string name="repay_plan_detail_item_qigong">期        供</string>
    <string name="repay_plan_detail_item_capital">本         金</string>
    <string name="repay_plan_detail_item_interest">利        息</string>
    <string name="repay_plan_detail_item_manager_fee">管  理  费</string>
    <string name="repay_plan_detail_item_capital_number">本金金额</string>
    <string name="consume_loan_titile">Mini循环消费贷</string>
    <string name="consume_loan_Nation">民        族:</string>
    <string name="consume_loan_EnglishName">英文姓名或拼音：张三</string>
    <string name="step1">1 专案选择</string>
    <string name="step2">2 风险提示</string>
    <string name="step3">3 证件扫描</string>
    <string name="basic_info">4-1 基本信息</string>
    <string name="career_info">4-2 职业信息</string>
    <string name="loan_application_info">4-4 贷款申请信息</string>
    <string name="input_name">中文姓名：</string>
    <string name="input_nationality">民        族：</string>
    <string name="input_cardType">证件类型：</string>
    <string name="input_cardNum">身份证号：</string>
    <string name="input_sex">性        别：</string>
    <string name="input_birthday">出生日期：</string>
    <string name="input_expiryDate">证件有效期：</string>
    <string name="input_cardDate">证件期限：</string>
    <string name="input_birthPlace">籍        贯：</string>
    <string name="step4">4-2 职业信息</string>
    <string name="title_schedule_strip_1">1、基本信息</string>
    <string name="input_text">申请人基本信息</string>
    <string name="marital_status">婚姻状况</string>
    <string name="marital_status_no">未婚</string>
    <string name="marital_status_yes">已婚</string>
    <string name="marital_status_other">其他</string>
    <string name="email_address">邮寄地址</string>
    <string name="email_address_dwell">现居住地址</string>
    <string name="email_address_unit">单位地址</string>
    <string name="career_status">在职状况</string>
    <string name="career_status_no">失业</string>
    <string name="career_status_yes">在职</string>
    <string name="career_status_retire">退休</string>
    <string name="stand_degree">文化程度</string>
    <string name="address_now">现居住地址：</string>
    <string name="permanent_address">户籍地址：</string>
    <string name="support_number">供养人数</string>
    <string name="support_rent">月供租金</string>
    <string name="home_phone">住宅电话：</string>
    <string name="area_card">区号</string>
    <string name="phone_no">电话号码</string>
    <string name="mobile_no">手机号码：</string>
    <string name="eamil_address">电子邮箱：</string>
    <string name="button_text">职业资料</string>
    <string name="title_schedule_strip_2">2、职业信息</string>
    <string name="tab_zhiye_ziliao">职业资料</string>
    <string name="input_now_dp_name">现单位全称：</string>
    <string name="input_now_dp_age">本单位工作年限</string>
    <string name="input_rz_dp">任职部门：</string>
    <string name="dp_address">单位地址：</string>
    <string name="dp_tel">单位电话:</string>
    <string name="area_num">区号</string>
    <string name="tel_num">电话号码</string>
    <string name="extension_num">分机号</string>
    <string name="dp_nature">单位性质</string>
    <string name="trade_nature">行业性质</string>
    <string name="title_schedule_strip_3">3、贷款申请信息</string>
    <string name="asset_debt_info">4-3 资产负债信息</string>
    <string name="title_schedule_strip_4">4、联系人信息</string>
    <string name="contact_info">4-5 联系人信息</string>
    <string name="direct_relatives_name1">亲属联系人姓名1：</string>
    <string name="direct_relatives_name2">亲属联系人姓名2：</string>
    <string name="title_schedule_strip_5">5、证件拍摄</string>
    <string name="title_schedule_strip_6">6、信息确认</string>
    <string name="step5">5 信息确认</string>
    <string name="check_info">1 账单查询</string>
    <string name="twophone">提示：发送账户交易提示短信，选择哪个号码？如果不的选择就默认为第一个</string>
    <string name="insquestion_title">问卷调查</string>
    <string name="insquestion_title_name1">测试题A</string>
    <string name="contact_tel">联系电话：</string>
    <string name="loan_money_count">贷款金额：</string>
    <string name="loan_money_use">贷款用途</string>
    <string name="credit_card_most_money">信用卡额度：</string>
    <string name="credit_card_most_money_hint">您的单张信用卡最高额度</string>
    <string name="money_month">每月收入：</string>
    <string name="money_month_hint">近半年平均月收入</string>
    <string name="credit_card_top_education">最高学历</string>
    <string name="house_property_status">房产状况</string>
    <string name="address">居住地址：</string>
    <string name="work_unit">工作单位：</string>
    <string name="commit_apply_intention">提交贷款意向</string>
    <string name="notice_title1">十三国驱逐外交官，美俄中反对意大利、西班牙。不过欧元扔然萎靡不振。背面且均具有法</string>
    <string name="notice_content1">欧债危机正由希腊等二线国家蔓延至意大利、西班牙。不过欧元扔然萎靡不振。背面且均具有法
			律效力，一经申请人签署申请书，本条款、申请书和贷款核准确认书等相关文件共同构成的本合同全部内容背面且均具有法
			律效力，一经申请人签署申请书，本条款、申请书和贷款核准确认书等相关文件共同构成的本合同全部内容ADASDADADASDADASDASD</string>
    <string name="value1">	    	    本条款载于《北银消费金融有限公司轻松付个人消费贷款申请书》（以下简称“申请书”）背面且均具有法
			律效力，一经申请人签署申请书，本条款、申请书和贷款核准确认书等相关文件共同构成的本合同全部内容
			（合称“本合同”）即对申请人自动生效，本合同经①申请人签署申请书，且②北银消费金融有限公司（以下
			简称本公司）在贷款核准确认书上加盖本公司印章后，于贷款核准确认书上列明的日期发生法律效力。双方
			无须在本页签署。</string>
    <string name="value2">第一章 定义与解释</string>
    <string name="approve_progress_name">客户姓名：</string>
    <string name="approve_progress_zhengjian_num">证件号码：</string>
    <string name="approve_progress_shenqing_num">申请编号：</string>
    <string name="approve_progress_shenpi_state">审批状态：</string>
    <string name="approve_progress_money_count">申请金额：</string>
    <string name="mini_card_jihuo">Mini卡激活</string>
    <string name="card_jihuo">卡片激活</string>
    <string name="mini_card_certificate_style">证件类型：</string>
    <string name="mini_card_certificate_number">证件号码：</string>
    <string name="card_number">卡\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020号：</string>
    <string name="mini_card_trade_psw">交易密码：</string>
    <string name="mini_card_confirm_psw">确认密码：</string>
    <string name="mini_card_atten_jihuo">激活</string>
</resources>