<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    
    <RelativeLayout
            android:id="@+id/app_sche_mess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/app_schedule_re1"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginTop="20dip"
                android:background="@drawable/comm_input_bg"
                android:gravity="center_vertical" >

                <TextView
                    style="@style/input_style_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:text="@string/approve_progress_name" />

                <TextView
                    android:id="@+id/app_schedule_query_name"
                    style="@style/editText_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/app_schedule_re2"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_below="@id/app_schedule_re1"
                android:layout_marginTop="13dip"
                android:background="@drawable/comm_input_bg"
                android:gravity="center_vertical" >

                <TextView
                    style="@style/input_style_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:text="@string/approve_progress_zhengjian_num" />

                <TextView
                    android:id="@+id/app_schedule_query_zhengjian_num"
                    style="@style/editText_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/app_schedule_re3"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_below="@id/app_schedule_re2"
                android:layout_marginTop="13dip"
                android:background="@drawable/comm_input_bg"
                android:gravity="center_vertical" >

                <TextView
                    style="@style/input_style_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:text="@string/approve_progress_shenqing_num" />

                <TextView
                    android:id="@+id/app_schedule_query_shenqing_num"
                    style="@style/editText_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/app_schedule_re4"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_below="@id/app_schedule_re3"
                android:layout_marginTop="13dip"
                android:background="@drawable/comm_input_bg"
                android:gravity="center_vertical" >

                <TextView
                    style="@style/input_style_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:text="@string/approve_progress_money_count" />

                <TextView
                    android:id="@+id/app_schedule_query_money_count"
                    style="@style/editText_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/app_schedule_re5"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_below="@id/app_schedule_re4"
                android:layout_marginTop="13dip"
                android:background="@drawable/comm_input_bg" >

                <ImageView
                    android:id="@+id/app_sch_jihuo"
                    android:layout_width="wrap_content"
                    android:layout_height="40dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:focusable="true"
                    android:background="@drawable/card_jihuo_selector" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@id/app_sch_jihuo"
                    android:gravity="center_vertical" >

                    <TextView
                        style="@style/input_style_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:text="@string/approve_progress_shenpi_state" />

                    <TextView
                        android:id="@+id/app_schedule_query_shenpi_state"
                        style="@style/editText_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

</LinearLayout>
